# Project_Python

./: README.md  initial_condition.py  ivf_func_stats  main.py  prof.out  profile.stats  profile_data.pyprof  program.prof  pyproject.toml  trajectroy.py
src/lrpackage/: lrmonte.py
src/lrpackage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
